--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-    
+    <h1>image search engine</h1>
     <script src="JS/script.js"></script>
 </body>
 </html>
