" Implemented search form with input and button"
-  Added a search form with an input field and a search button. The input field includes a placeholder for guiding users on the purpose of the search.
- This form can be used to facilitate user searches within the application.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>image search engine</h1>
+    <form id="search-form">
+        <input type="text" id="search-box" placeholder="Search anithing here">
+        <button>Search</button>
+    </form>
     <script src="JS/script.js"></script>
 </body>
 </html>
