--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>image search engine</h1>
     <form id="search-form">
-        <input type="text" id="search-box" placeholder="Search anithing here">
+        <input type="text" id="search-box" placeholder="Search anything here">
         <button>Search</button>
     </form>
     <script src="JS/script.js"></script>
