"Added search result display and “Show More” button"
- Created a container for search results with the id “search-result” and added a “Show More” button with the id “show-more-btn” to facilitate additional content display.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <input type="text" id="search-box" placeholder="Search anything here">
         <button>Search</button>
     </form>
+    <div id="search-result"></div>
+    <button id="show-more-btn">Show More</button>
     <script src="JS/script.js"></script>
 </body>
 </html>
